--- a/style.css
+++ b/style.css
@@ -9,11 +9,12 @@ html,body{
 #main{
     position: relative;
     width: 100vw;
-    /* height: 100vh; */
     background-color: #FFECCE;
     overflow: hidden;
-    /* border: 2px solid #000; */
     font-family: Gilroy;
+}
+::-webkit-scrollbar {
+    display: none;
 }
 #nav{
     display: flex;
@@ -152,7 +153,6 @@ html,body{
 }
 #page2>button:hover{
     background-color: blue;
-    color: #fff;
 }
 #text{
     position: absolute;
@@ -220,12 +220,13 @@ html,body{
     background-color:#CCF17F;
     transition:cubic-bezier(0.19, 1, 0.22, 1)3s;
 }
-.image:hover>button{
+.image:hover button{
     cursor: pointer;
     background-color: rgb(235, 9, 9);
 }
 
 #page4{
+    position: relative;
     width: 100%;
     height:100% ;
 }
@@ -260,10 +261,10 @@ html,body{
      font-size: 15px;
      border: 1px solid #000;
      padding: 10px 10px ;
-     border-radius: 50%;
+     border-radius: 70%;
      opacity: 0;
 }
-.card:hover>h6{
+.card:hover h6{
     opacity: 1;
 }
 .card>h2{
@@ -275,12 +276,12 @@ html,body{
 .card>i{
     font-size: 30px;
 }
-.card:hover>img{
+.card:hover img{
     cursor:pointer;
     opacity: 1;
 
 }
-.card:hover>i{
+.card:hover i{
     transform: rotate(45deg);
 }
 .card:nth-last-child(1){
@@ -364,19 +365,17 @@ background-color: blueviolet;
 #line{
     display: flex;
     align-items: center;
-    justify-content: center;
     width: 100%;
     height: 5%;
     border: 2px solid #000;
     white-space: nowrap;
 } 
 #text6{
-    width: 100%;
     display: flex;
     align-items: center;
     margin-top: 20px;
     animation-name: yoyo;
-    animation-duration: 10s;
+    animation-duration: 15s;
     animation-timing-function: linear;
     animation-delay: 1s;
     animation-iteration-count: infinite;
@@ -505,9 +504,7 @@ border-bottom:2px solid #000;
     font-size: 20px;
     font-weight: 600;
     margin-left: 5%;
-    margin-top: 4%;    
-    text-decoration: underline;
-
+    margin-top: 3%;    
 }
 #leftd>h3{
     font-size: 20px;
@@ -515,13 +512,11 @@ border-bottom:2px solid #000;
     margin-left: 25%;
     margin-top: -13%;
     line-height: -10px;
-    text-decoration: underline;
 }
 #leftd>h2{
     margin-left: 50%;
-    margin-top: -13%;
+    margin-top: -11%;
     font-size: 33px;
-
 }
 #help{
     display: flex;
@@ -530,8 +525,6 @@ border-bottom:2px solid #000;
     margin-left: 50%;
     margin-top: 3%;
     line-height: 30px;
-    text-decoration: underline;
-
 }
 #rightd{
     display: flex;
@@ -546,7 +539,6 @@ border-bottom:2px solid #000;
     height: 25px;
     border-radius: 20px;
     padding: 5px 5px;
-
 }
 #rightd>i{
     border: 2px solid #000;
@@ -566,18 +558,392 @@ color: #fff;
     width: 40%;
     /* background-color: #fff; */
     border-bottom: 1px solid #000;
-    text-decoration: underline;
-
 }
 #la>i{
-    border: 1px solid;
     font-size: 30px;
     margin-left: 90%;
-    
 }
 #la>i:hover{
     color: rgb(163, 156, 156);
     border: #000;
     background-color: #000;
     cursor: progress;
+}
+@media screen and (max-width: 630px) {
+    #nav{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 100vw;
+        height: 5vh;
+        border-bottom: 1px solid #000;
+    
+    }  
+    #image{
+        border:2px solid #000;
+        position: relative;
+        width: 80vw;
+        height: 50vh;
+       overflow: hidden;
+       
+    }
+    #part2{
+        width: 100%;
+        font-family: Gilroy;
+        font-style: oblique;
+        font-size: 20px;
+        padding: 10px 120px;
+    }
+       
+    #border{
+        position: absolute;
+        width: 80%;
+        height: 50%;
+        top: 12%;
+        left: 10%;
+        border: 2px solid #000;
+    }
+    #page2 img{
+        position: absolute;
+        width: 75%;
+        height: 52%;
+        background-color: rgb(170, 20, 20);
+        top: 15%;
+        left: 12%;
+        border: 2px solid #000;
+        
+    }
+    #page2>button{
+        position: absolute;
+        top:40% ;
+        left: 79%;
+        font-size: 20px;
+        background-color:#CCF17F;
+        border: 1px solid #000;
+        padding: 20px 20px ;
+        border-radius: 80%;
+        transition: .5s;
+    }
+    #text{
+        position: absolute;
+        width: 50%;
+        height: 30%;
+        left: 10%;
+        top: 70%;
+    }
+    #text>h1{
+        font-size: 30px;
+        font-family: Gilroy;
+        font-style: oblique;
+        margin-bottom: 5%;
+    }
+    #bim{
+        position: absolute;
+        width: 30%;
+        height: 25%;
+        top: 70%;
+        right: 10%;
+        border: 2px solid #000;
+    }
+    #bim>img{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 5%;
+        right: 10%;
+        border: 2px solid #000;
+    }
+    #page3{
+        position: relative;
+        flex-direction: column;
+        width: 100%;
+        height:100vh ;
+        overflow: hidden;
+        background-image: url(https://t3.ftcdn.net/jpg/01/79/98/92/360_F_179989207_ZI8skwgg5C269G4RHqFdtFuUmhpUIhUi.jpg);
+        background-size: cover;
+        background-position: center;
+        padding: 10px 0px;
+    }
+    
+#page3>.image{
+    width: 80%;
+    height: 30%;
+    background-color: rgb(2, 2, 2);
+    border: 2px solid #000;
+    margin-bottom: 60px;
+}
+.image>img{
+    width: 100%;
+    height: 100%;
+}
+.image>button{
+    font-size: 10px;
+    width: 95%;
+    height: 10%;
+    margin-left: 3%;
+    background-color:#CCF17F;
+    transition:cubic-bezier(0.19, 1, 0.22, 1)3s;
+}
+.image:hover button{
+    cursor: pointer;
+    background-color: rgb(235, 9, 9);
+}
+
+
+#textimage{
+    position: absolute;
+    width: 90%;
+    height: 50%;
+    top: 5%;
+    left: 5%;
+    background-color: #fff;
+    font-family: Gilroy;
+}
+
+#textimage>h1{
+    font-size: 40px;
+    font-style: oblique; 
+}
+#textimage>h4{
+    font-weight: 200;
+    padding: 2px 20px ;
+    font-style: oblique; 
+}
+#blow{
+    margin-top: 10%;
+    margin-left: 10%;
+    width: 70%;
+    height: 50%;
+    border: 2px solid #000;
+}
+#blow>img{
+    width: 100%;
+    height: 100%;
+    margin-top: 15px;
+    margin-left: 15px;
+}
+#textimage>button{
+    position: absolute;
+    top:70% ;
+    left: 70%;
+    font-size: 20px;
+    background-color:#CCF17F;
+    border: 1px solid #000;
+    padding: 20px 20px ;
+    border-radius: 80%;
+    transition: .5s;
+}
+#textimage:hover button{
+cursor: pointer;
+background-color: blueviolet;
+ }
+#blow2{
+    position: absolute;
+    width: 80%;
+    height: 40%;
+    top: 47%;
+    left: -40%;
+    border: 2px solid #000;
+    margin-left: 50%;
+    margin-top: 100px;
+
+ }
+#blow2>img{
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
+    margin-left: -20px;
+    border: 2px solid #000;
+ }
+ #line{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 3%;
+    border: 1px solid #000;
+    white-space: nowrap;
+} 
+#page6>h1{
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    font-size: 35px;
+    font-family: Gilroy;
+    font-style: italic;
+    margin-bottom: 5%;
+
+}
+
+#page6>h3{
+    font-size: 25px;
+    margin-left: 70%;
+    margin-top: 20%;
+    font-family: gilroy;
+    margin-bottom: 3%;
+}
+#page6>h5{
+    margin-left: 68%;
+    font-size: 20px;
+    font-weight: 200;
+    font-style: italic;
+}
+#page6>img{
+    position: absolute;
+    top: 35%;
+    left: 5%;
+    width: 90%;
+    height: 50%;
+    border: 2px solid #000;
+    padding: 10px 10px ;
+}
+
+
+#page7{
+    position: relative;
+     width: 100%;
+     height: 150vh;
+     /* background-color: rgb(157, 11, 11); */
+    /* overflow: hidden; */
+    overflow: hidden;
+}
+#page7>h2{
+    position: absolute;
+    left: 30%;
+    font-size: 50px;
+    text-transform: uppercase;
+    font-family: Gilroy;
+    font-style: italic;   
+}
+
+
+#line2{
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 10%;
+    width: 120%;
+    height: 3%;
+    border: 2px solid #000;
+    font-size: 15px;
+} 
+#go{
+    display: flex;
+    align-items: center;
+    animation-name: yoyo;
+    animation-duration: 15s;
+    animation-timing-function: linear;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+    white-space: nowrap;
+}
+#img7{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    flex-direction: column;
+    top: 15%;
+    width: 100%;
+    height: 70%;
+}
+.imgs{
+    width: 80%;
+    height: 30%;
+}
+.imgs>img{
+    width: 100%;
+    height: 100%;
+    border:2px solid #000;
+}
+.imgs1>img{
+    width: 80%;
+    height: 100%;
+    border:2px solid #000;
+}
+
+#hborder>h2{
+    margin-left: 45%;
+    margin-bottom: 5%;
+}
+#hborder{
+    margin-top: 47%;
+border-bottom:2px solid #000;
+}
+#tborder{
+    position: absolute;
+    top: 90%;
+    display: flex;
+    font-style: italic;
+}
+#leftd{
+    width: 50vw;
+    height: 50vh;
+    /* background-color: rgb(51, 182, 12); */
+    gap: 10px;
+    border-right: 2px solid #000;
+    cursor: pointer;
+    
+}
+#leftd>ul{
+    width: 50px;
+    font-size: 15px;
+    font-weight: 600;   
+}
+#leftd>h3{
+    opacity: 0;
+}
+#leftd>h2{
+    margin-left: 60%;
+    margin-top: -35%;
+    font-size: 33px;
+    
+}
+#help{
+    display: flex;
+    font-size: 20px;
+    margin-left: 50%;
+}
+#help .g{
+    opacity: 0;
+}
+#rightd{
+    display: flex;
+    font-size: 15px;
+    margin-left: 5%;
+    margin-top: 3%;
+    gap: 5px;
+    
+}
+#rightd>h4{
+    border: 2px solid #000;
+    height: 25px;
+    border-radius: 20px;
+}
+#rightd>i{
+    border: 2px solid #000;
+    height: 20px;
+    border-radius: 20px;
+}
+#rightd>h4:hover{
+cursor: pointer;
+background-color: #000;
+color: #fff;
+}
+#tborder>#la{
+    margin-top: 8%;
+    margin-left: -40%;
+    height: 10%;
+    width: 40%;
+    /* background-color: #fff; */
+    border-bottom: 1px solid #000;
+}
+#la>i{
+    font-size: 30px;
+    margin-left: 90%;
+}
+#la>i:hover{
+    color: rgb(163, 156, 156);
+    border: #000;
+    background-color: #000;
+    cursor: progress;
+}
 }
